z-index fix

--- a/virtual_campus/src/components/Avatar.css
+++ b/virtual_campus/src/components/Avatar.css
@@ -4,14 +4,13 @@
     height: 50px;
     border-radius: 50%;
     position: absolute;
-    z-index: 0;
+    z-index: 2;
 }
 
 .Img-Style {
     position: absolute;
-    z-index: -1;
     position: absolute; 
-    z-index: 2;
+    z-index: 1;
 }
 
 
